# agentns_client

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
agentns_client/: __init__.py  auth.py  client.py  dns.py  domains.py  exceptions.py  models.py  networks.py  payment.py  registrant.py  solana_auth.py  solana_payment.py  solana_wallet.py  x402_client.py
agentns_client/examples/: __init__.py  buy_domain.py
